<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ca.medynski.test</groupId>
    <artifactId>jdt.ls-add-exports</artifactId>
    <version>1.0-SNAPSHOT</version>

    <!--
    <parent>
        <groupId>com.nuance.northstar</groupId>
        <artifactId>lightsaber-service-parent</artifactId>
        <version>1.0.7</version>
    </parent>
    -->

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.release>21</maven.compiler.release>

        <!-- Specify the output directory for builds. -->
        <build.output>target</build.output>
    </properties>

    <profiles>
      <!--
        Configure IDE-based builds that use the Eclipse Maven toolset to
        output to a different directory than the real Maven builds to avoid
        collisions.
      -->
      <profile>
        <id>m2e</id>
        <activation>
          <property><name>m2e.version</name></property>
        </activation>
        <properties>
          <build.output>target-ide</build.output>
        </properties>
      </profile>
    </profiles>    
    
    <build>
      <!-- Tell Maven command-line builds where to write their output. -->
      <directory>${build.output}</directory>

        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.13.0</version>
            <configuration>
              <failOnError>true</failOnError>
              <failOnWarning>true</failOnWarning>
              <parameters>true</parameters>
              <compilerArgs>
                <arg>-Xlint:all</arg>
                <arg>--add-exports</arg>
                <arg>java.xml/com.sun.org.apache.xerces.internal.util=ALL-UNNAMED</arg>
                </compilerArgs>
            </configuration>
          </plugin>
        </plugins>
      </build>
</project>
